Prevent horizontal scrollbar from hero home block

--- a/themes/shiro/assets/src/sass/css/scss/_global.scss
+++ b/themes/shiro/assets/src/sass/css/scss/_global.scss
@@ -3,6 +3,7 @@ body {
 	font-size:100%;
 	background: $wmui-color-base100;
 	color: $wmui-color-base10;
+	overflow-x: hidden;
 }
 
 hr {
